Add content section family

--- a/css/sections/sapphire.css
+++ b/css/sections/sapphire.css
@@ -1,6 +1,27 @@
 @media screen and (min-width: 390px) and (max-width: 834px) {
-
   .sapphire {
-    text-align: center;
+    display: grid;
+    grid-template-columns:  40% 70%;
+    grid-template-rows: auto auto ;
+    height: 100vh;
+    
+  }
+
+  .sapphire__title {
+    margin: 0 auto;
+  }
+  .sappire__text {
+    display: flex;
+    flex-direction: column;
+  }
+  .sapphire__saxophone {
+    grid-column: 2 / 4;
+    grid-row: 1 / 4;
+
+    height: 100vh;
+    background-image: url("../../assets/mobile/sapphire/saxophone.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
   }
 }
