--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 
 @font-face {
   font-family: "AlaChamp";
-  src: url("../fonts/ala\ champ_demo.ttf") format("truetype");
+  src: url("../fonts/ala_champ.ttf") format("truetype");
 }
 
 body {
