--- a/css/sections/sapphire.css
+++ b/css/sections/sapphire.css
@@ -1,27 +1,46 @@
-@media screen and (min-width: 390px) and (max-width: 834px) {
-  .sapphire {
-    display: grid;
-    grid-template-columns:  40% 70%;
-    grid-template-rows: auto auto ;
-    height: 100vh;
-    
-  }
+.sapphire {
+  display: grid;
+  grid-template-columns: repeat(10, 10%);
+  grid-template-rows: repeat(6, 13.5%);
+  height: 100vh;
+  background-image: url("../../assets/mobile/sapphire/saxophone.png");
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
-  .sapphire__title {
-    margin: 0 auto;
-  }
-  .sappire__text {
-    display: flex;
-    flex-direction: column;
-  }
-  .sapphire__saxophone {
-    grid-column: 2 / 4;
-    grid-row: 1 / 4;
+.item--1 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  align-self: center;
+  grid-area: 2 / 1 / 2 / 5;
+  gap: 1vh;
+}
 
-    height: 100vh;
-    background-image: url("../../assets/mobile/sapphire/saxophone.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-  }
+.item--2 {
+  display: flex;
+  align-items: center;
+  gap: 4vh;
+  justify-items: center;
+  grid-area: 3 / 1/ 4 / 5;
+}
+.item--3 {
+  display: flex;
+  align-items: flex-end;
+  grid-area: 4 / 1 / 5 / 5;
+}
+.item--4 {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  grid-area: 3 / 7 / 3 / 11;
+  gap: 3vh;
+}
+
+.item--5 {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  grid-area: 5 / 7 / 5 / 11;
+  gap: 4vh;
 }
