--- a/css/sections/sapphire.css
+++ b/css/sections/sapphire.css
@@ -1,3 +1,4 @@
+
 .sapphire {
   display: grid;
   grid-template-columns: repeat(10, 10%);
@@ -8,7 +9,11 @@
   background-position: center;
 }
 
-.item--1 {
+.sapphire i {
+color: var(--color-accent-red);
+}
+
+.sapphire__mouth {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -17,19 +22,19 @@
   gap: 1vh;
 }
 
-.item--2 {
+.sapphire__body {
   display: flex;
   align-items: center;
   gap: 4vh;
   justify-items: center;
   grid-area: 3 / 1/ 4 / 5;
 }
-.item--3 {
+.sapphire__rightHand {
   display: flex;
   align-items: flex-end;
   grid-area: 4 / 1 / 5 / 5;
 }
-.item--4 {
+.sapphire__leftHand {
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -37,7 +42,7 @@
   gap: 3vh;
 }
 
-.item--5 {
+.sapphire__bell {
   display: flex;
   align-items: flex-end;
   justify-content: center;
