--- a/css/sections/sapphire.css
+++ b/css/sections/sapphire.css
@@ -1,4 +1,3 @@
-
 .sapphire {
   display: grid;
   grid-template-columns: repeat(10, 10%);
@@ -10,7 +9,7 @@
 }
 
 .sapphire i {
-color: var(--color-accent-red);
+  color: var(--color-accent-red);
 }
 
 .sapphire__mouth {
@@ -48,4 +47,30 @@ color: var(--color-accent-red);
   justify-content: center;
   grid-area: 5 / 7 / 5 / 11;
   gap: 4vh;
+}
+
+.sapphire__mouth--info {
+  display: flex;
+  height: 50vh;
+  margin-inline: 5vh;
+  color: black;
+  background-image: url("../../assets/mobile/sapphire/paper-cut-2.png");
+  background-position: top;
+  background-repeat: no-repeat;
+  border-radius: 1.4rem;
+  opacity: 70%;
+}
+
+.sapphire__mouth__text {
+  display: flex;
+  text-align: left;
+  flex-direction: column;
+  gap: 3vh;
+  justify-content: center;
+  align-items: center;
+  margin-inline: 20px;
+}
+
+.sapphire__h1 {
+  color: var(--color-accent-red);
 }
