--- a/css/sections/sapphire.css
+++ b/css/sections/sapphire.css
@@ -50,22 +50,26 @@
 }
 
 .sapphire__mouth--info {
-  display: flex;
+  position: absolute;
+  top: 8150px;
+  z-index: 999;
+  display: none;
   height: 50vh;
   margin-inline: 5vh;
   color: black;
   background-image: url("../../assets/mobile/sapphire/paper-cut-2.png");
   background-position: top;
   background-repeat: no-repeat;
-  border-radius: 1.4rem;
-  opacity: 70%;
+  justify-content: space-between;
+  gap: 7vh;
+  flex-direction: column;
 }
 
 .sapphire__mouth__text {
   display: flex;
   text-align: left;
   flex-direction: column;
-  gap: 3vh;
+  gap: 2.5vh;
   justify-content: center;
   align-items: center;
   margin-inline: 20px;
@@ -73,4 +77,14 @@
 
 .sapphire__h1 {
   color: var(--color-accent-red);
+}
+
+.closeBtn {
+  text-align: end;
+}
+
+.star {
+  text-align: center;
+  color:var(--color-accent-yellow);
+  opacity: 80%;
 }
