--- a/css/sections/sapphire.css
+++ b/css/sections/sapphire.css
@@ -66,7 +66,7 @@
   flex-direction: column;
 }
 
-.sapphire__mouth__text {
+.sapphire__text {
   display: flex;
   text-align: center;
   flex-direction: column;
@@ -80,7 +80,7 @@
   color: var(--color-accent-red);
 }
 
-.closeBtnMouth, .closeBtnBody {
+.mouthCloseBtn, .bodyCloseBtn {
   text-align: end;
   padding-right: 1vh;
 }
@@ -91,6 +91,7 @@
   opacity: 80%;
 }
 
+/* Body info */
 .sapphire__body--info {
   position: absolute;
   top: 8150px;
@@ -105,14 +106,4 @@
   justify-content: space-between;
   gap: 7vh;
   flex-direction: column;
-}
-
-.sapphire__body__text {
-  display: flex;
-  text-align: center;
-  flex-direction: column;
-  gap: 2.5vh;
-  justify-content: center;
-  align-items: center;
-  margin-inline: 20px;
 }
