Add onclick function for opening the card for lefthand and close function

--- a/css/sections/sapphire.css
+++ b/css/sections/sapphire.css
@@ -116,7 +116,7 @@
 
 /* Lefthand info */
 .sapphire__leftHand--info {
-  display: flex;
+  display: none;
   justify-content: space-between;
   flex-direction: column;
   position: absolute;
