--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,15 @@
 @import url("./sections/sapphire.css");
 @import url("./sections/family.css");
 @import url("./sections/familyMembers.css");
+@import url("./sections/theConcerts.css");
 @import url("./sections/goToConcert.css");
 @import url("./sections/getInTouch.css");
 
 :root {
   --color-accent-red: #c92e2f;
   --color-accent-yellow: #f1b509;
+  --color--background-beige: #F6EFDD;
+  --font-AlaChamp: "AlaChamp";
   --font-size-body-copy: clamp(1.125rem, 1.069rem + 0, 2vw, 1.713rem);
   --font-size-title: clamp(2rem, 1.82rem + 3.952vw, 100px);
 }
@@ -40,7 +43,7 @@ main {
   position: relative;
   overflow-x: hidden;
   background-image: url("../assets/seamless-background.jpeg");
-  z-index: -1;
+  /* z-index: -1; */
 }
 
 p {
