--- a/css/sections/familyMembers.css
+++ b/css/sections/familyMembers.css
@@ -22,7 +22,7 @@
     font-size: 1.5rem;
     color: var(--color-accent-red);
 }
-.sopranoBtn {
+.button__style {
   background-color: var(--color-accent-red);
   border: 2px solid #422800;  
   border-radius: 30px;
@@ -41,17 +41,13 @@
   touch-action: manipulation;
 }
 
-.sopranoBtn:hover {
+.button__style:hover {
   background-color: #fff;
 }
 
-.sopranoBtn:active {
-  box-shadow: #422800 2px 2px 0 0;
-  transform: translate(2px, 2px);
-}
 
 @media (min-width: 768px) {
-  .sopranoBtn {
+  .button__style {
     min-width: 200px;
     padding: 0 25px;
   }
