--- a/css/sections/features.css
+++ b/css/sections/features.css
@@ -1,10 +1,9 @@
-/* Mobie version  */
-@media screen and (min-width: 390px) {
   .background__features {
     min-height: 100vh;
     background-image: url("../../assets/mobile/features/background__feature.png");
     background-size: cover;
     background-repeat: no-repeat;
+    z-index: 999;
   }
 
   .features {
@@ -14,8 +13,9 @@
     grid-template-rows: 60vh 20vh 20vh;
     text-align: center;
     place-items: center;
+    z-index: 999;
   }
-  
+
   .features__love p {
     font-size: 4rem;
   }
@@ -23,4 +23,3 @@
   .features__love__adolphe {
     font-size: 20px;
   }
-}
