--- a/css/sections/verticalScroll.css
+++ b/css/sections/verticalScroll.css
@@ -9,18 +9,24 @@
 
 .container__text {
   width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 5vh;
 }
 
+.container__text h1 {
+  color: var(--color-accent-yellow)
+}
 .date__container__text {
-  height: 100%;
+  height: 100vh;
   text-align: center;
   display: table-cell;
   vertical-align: middle;
-  color: #F1B509;
-}
+ }
 
 .date__text {
   display: inline-block;
+  z-index: 2;
 }
 
 .fixed__date__text {
@@ -40,7 +46,7 @@
 }
 
 #img__div {
-  z-index: -2;
+  z-index: -1;
 }
 
 #img__div img {
@@ -52,9 +58,8 @@
   bottom: 0;
   left: 0;
   object-fit: contain;
-  z-index: -2;
+  z-index: -1;
 }
-
 .img__div {
   position: relative;
   display: table;
@@ -65,7 +70,6 @@
 
 .container__sideText {
   width: 90%;
-  font-size: 16px;
 }
 .date__text {
   font-size: 20vw;
