--- a/css/sections/sectionThree.css
+++ b/css/sections/sectionThree.css
@@ -11,19 +11,19 @@
 }
 .sectionThree__images {
   display: flex;
+  height: auto;
   margin-block: 5rem;
   justify-content: center;
   align-items: center;
 }
 
 .sectionThree h1 {
-  font-size: 3.5rem;
+  /* font-size: 3.5rem; */
   font-family: Alachamp;
-  color: #C92E2F;
+  color: #c92e2f;
 }
 .sectionThree img {
   position: relative;
-  width: 100%;
   object-fit: cover;
 }
 
@@ -39,4 +39,11 @@
 .saxophone {
   z-index: 2;
   left: 200px;
+}
+
+/* Ipad version */
+@media screen and (min-width: 834px) and (max-width: 1512px) {
+.sectionThree__adolpheSax, .sectionThree__sapphire {
+  font-size: 6em;
+}
 }
