--- a/css/sections/verticalScroll.css
+++ b/css/sections/verticalScroll.css
@@ -15,14 +15,14 @@
 }
 
 .container__text h1 {
-  color: var(--color-accent-yellow)
+  color: var(--color-accent-yellow);
 }
 .date__container__text {
   height: 100vh;
   text-align: center;
   display: table-cell;
   vertical-align: middle;
- }
+}
 
 .date__text {
   display: inline-block;
@@ -31,7 +31,6 @@
 
 .fixed__date__text {
   z-index: 1;
-  
 }
 
 .container__sideText {
@@ -46,7 +45,7 @@
 }
 
 #img__div {
-  z-index: -1;
+  z-index: 1;
 }
 
 #img__div img {
@@ -73,4 +72,18 @@
 }
 .date__text {
   font-size: 20vw;
+}
+
+/* Ipad version */
+@media screen and (min-width: 834px) and (max-width: 1512px) {
+  .container__sideText {
+    width: 90%;
+  }
+  .container__sideText {
+    font-size: 1.6rem;
+  }
+  .container__text h1 {
+    font-size: 5rem;
+    line-height: 4rem;
+  }
 }
