--- a/css/sections/adolphe.css
+++ b/css/sections/adolphe.css
@@ -1,68 +1,88 @@
 .sectionTwo {
   display: grid;
+  height: 100vh;
+  grid-template-columns: auto;
+  grid-template-rows: 20vh 20vh 20vh 20vh 15vh;
+  text-align: center;
+  place-items: center;
+  gap: 2vh;
+}
+.sectionTwo__title {
+  position: relative;
+  top: 5rem;
+  z-index: 999;
+  font-size: 3rem;
 }
 
-/* Mobie version  */
-@media screen and (min-width: 390px) and (max-width: 834px) {
-  .sectionTwo {
-    height: 100vh;
-    grid-template-columns: auto;
-    grid-template-rows: 20vh 20vh 20vh 20vh 15vh;
-    text-align: center;
-    place-items: center;
-    gap: 2vh;
-  }
-  .sectionTwo__title {
-    position: relative;
-    top: 5rem;
-    z-index: 999;
-    font-size: 3rem;
-  }
+.title__date {
+  position: relative;
+  left: 21rem;
+}
 
-  .sectionTwo__adolphe {
-    position: relative;
-    bottom: 13vh;
-    margin: 0 auto;
-    z-index: 1;
-  }
+.sectionTwo__adolphe {
+  position: relative;
+  bottom: 13vh;
+  margin: 0 auto;
+  z-index: 1;
+}
 
-  .sectionTwo__text {
-    display: grid;
-    gap: 20px;
-    place-items: center;
-  }
+.sectionTwo__text {
+  display: grid;
+  gap: 20px;
+  place-items: center;
+}
 
-  .title__date {
-    left: 350px;
-  }
-  .sectionTwo__secretButton {
-    grid-row: 5;
-  }
+.sectionTwo__secretButton {
+  grid-row: 5;
+}
 
-  .sectionTwo__mannekePis {
-    position: relative;
-    bottom: 20rem;
-    left: 9rem;
-  }
+.sectionTwo__mannekePis {
+  position: relative;
+  bottom: 20rem;
+  left: 18vh;
 }
 
 /* Mackbook pro 14 inch - Verion */
-/* @media screen and (min-width: 1512px) {
+@media screen and (min-width: 1512px) {
   .sectionTwo {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 25%);
     height: 100vh;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    text-align: center;
-    place-items: center;
-    gap: 2vh;
+    gap: 4vh;
   }
 
   .sectionTwo__adolphe {
+    grid-column: 1;
+    grid-row: 1 / 5;
+  }
+
+  .sectionTwo__title {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  .sectionTwo__text--1 {
+    grid-column: 2;
+    grid-row: 2 / 4;
+  }
+
+  .sectionTwo__text--2 {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  .sectionTwo__secretButton {
+    grid-column: 2;
+    grid-row: 4;
+  }
+
+  /* .sectionTwo__adolphe {
     grid-column: 1;
     grid-row: 1;
     position: relative;
     right: 50rem;
     bottom: 13vh;
     z-index: 1;
-  }
-} */
+  } */
+}
