--- a/css/sections/features.css
+++ b/css/sections/features.css
@@ -64,6 +64,10 @@
   }
   .loves {
     grid-column: 5 / 7;
+    grid-row: 3;
+    width: 900%;
+    align-self: center;
+
   }
 
   .features__love__adolphe {
