--- a/css/sections/adolphe.css
+++ b/css/sections/adolphe.css
@@ -31,7 +31,10 @@
   gap: 20px;
   place-items: center;
 }
-
+.title__name {
+  position: relative;
+  left: -20rem;
+}
 .sectionTwo__secretButton {
   grid-row: 5;
 }
@@ -42,6 +45,31 @@
   left: 18vh;
 }
 
+/* Ipad version */
+@media screen and (min-width: 834px) and (max-width: 1512px) {
+  .sectionTwo__mannekePis {
+    bottom: 30rem;
+    left: 30vh;
+    width: 20%;
+  }
+
+  .sectionTwo__title {
+    position: relative;
+    top: 5rem;
+    z-index: 999;
+    font-size: 3rem;
+  }
+
+  .title__name {
+    position: relative;
+    left: -36rem;
+  }
+
+  .title__date {
+    left: 33rem;
+  }
+}
+
 /* Mackbook pro 14 inch - Verion */
 @media screen and (min-width: 1512px) {
   .sectionTwo {
@@ -50,9 +78,11 @@
     grid-template-rows: repeat(4, 25%);
     height: 100vh;
     gap: 4vh;
+    text-align: left;
   }
 
-  .sectionTwo__adolphe {
+  .sectionTwo__adolphe{
+    z-index: 1;
     grid-column: 1;
     grid-row: 1 / 5;
   }
@@ -64,7 +94,7 @@
 
   .sectionTwo__text--1 {
     grid-column: 2;
-    grid-row: 2 / 4;
+    grid-row: 1 / 4;
   }
 
   .sectionTwo__text--2 {
@@ -76,13 +106,4 @@
     grid-column: 2;
     grid-row: 4;
   }
-
-  /* .sectionTwo__adolphe {
-    grid-column: 1;
-    grid-row: 1;
-    position: relative;
-    right: 50rem;
-    bottom: 13vh;
-    z-index: 1;
-  } */
 }
