--- a/css/sections/familyMembers.css
+++ b/css/sections/familyMembers.css
@@ -40,6 +40,11 @@
   -webkit-user-select: none;
   touch-action: manipulation;
 }
+.familyMembers__information {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
 
 .button__style:hover {
   background-color: #fff;
@@ -90,7 +95,7 @@
     gap: 2rem;
   }
   .familyMembers {
-   gap: 5rem;
-   margin-bottom: 4rem;
+    gap: 5rem;
+    margin-bottom: 4rem;
   }
 }
