--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,26 @@ img {
   max-width: 100%;
 }
 
+/* .preloader {
+  background-color: #000000;
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  z-index: 10000;
+  overflow-y: hidden;
+  overflow-x: hidden;
+} */
+
+/* .visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+} */
+
 .intro,
 .sectionTwo,
 .verticalScroll,
