--- a/css/sections/adolphe.css
+++ b/css/sections/adolphe.css
@@ -31,10 +31,6 @@
   gap: 20px;
   place-items: center;
 }
-.title__name {
-  position: relative;
-  left: -20rem;
-}
 .sectionTwo__secretButton {
   grid-row: 5;
 }
@@ -46,6 +42,7 @@
 }
 
 .sectionTwo__secretInfo {
+  display: none;
   position: absolute;
   color: black;
   height: calc(120vh / 2);
@@ -85,11 +82,6 @@
     font-size: 3rem;
   }
 
-  .title__name {
-    position: relative;
-    left: -36rem;
-  }
-
   .title__date {
     left: 33rem;
   }
@@ -100,7 +92,7 @@
   .sectionTwo {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 25%);
+    grid-template-rows: 10vh;
     height: 100vh;
     gap: 4vh;
     text-align: left;
@@ -109,7 +101,9 @@
   .sectionTwo__adolphe {
     z-index: 1;
     grid-column: 1;
-    grid-row: 1 / 5;
+    grid-row: 3;
+    position: relative;
+    top: 22rem;
   }
 
   .sectionTwo__title {
@@ -130,5 +124,8 @@
   .sectionTwo__secretButton {
     grid-column: 2;
     grid-row: 4;
+  }
+  .title__date {
+    left: 40rem;
   }
 }
